fix(core) responsiveness and height on mobile

--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Helvetica Neue Medium";
-    src: url("src/font/HelveticaNeueMedium.otf") format("opentype");
+    src: url("/font/HelveticaNeueMedium.otf") format("opentype");
     font-weight: medium;
     font-style: normal;
     font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: "Helvetica Neue Light";
-    src: url("src/font/HelveticaNeueLight.otf") format("opentype");
+    src: url("/font/HelveticaNeueLight.otf") format("opentype");
     font-weight: light;
     font-style: normal;
     font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
     font-family: "Helvetica Neue Regular";
-    src: url("src/font/HelveticaNeue Regular.ttf") format("truetype");
+    src: url("/font/HelveticaNeue Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
