--- a/src/styles/views/audience.scss
+++ b/src/styles/views/audience.scss
@@ -2,6 +2,9 @@
     width: 100%;
     height: 100%;
     background-color: $color-Orange;
+    @include media("<phone") {
+        height: 100vh;
+    }
 }
 
 .audience__wrapper {
