--- a/src/styles/views/faqs.scss
+++ b/src/styles/views/faqs.scss
@@ -3,6 +3,9 @@
     background-color: $color-Orange;
     padding-bottom: 9.2rem;
     padding-top: 9rem;
+    @include media("<phone") {
+        height: 100vh;
+    }
 }
 
 .questions__title__text {
@@ -34,6 +37,7 @@
 
     @include media("<phone") {
         padding: 0 1rem;
+        height: 10rem;
     }
 }
 
