--- a/src/styles/views/footer.scss
+++ b/src/styles/views/footer.scss
@@ -8,11 +8,23 @@
     width: 100%;
     height: 100%;
     padding: 8rem 6.4rem;
+    @include media("<phone") {
+        height: 80vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+    }
 }
 
 .footer__content {
     max-width: 128rem;
     height: 56.6rem;
+
+    @include media("<phone") {
+        width: 100%;
+    }
 }
 
 .footer__description {
@@ -29,6 +41,10 @@
         text-decoration: underline;
         display: inline-block;
         margin: 0 0.4rem;
+    }
+
+    @include media("<phone") {
+        padding-left: 4rem;
     }
 }
 
