--- a/src/styles/views/services.scss
+++ b/src/styles/views/services.scss
@@ -3,7 +3,7 @@
     height: 100%;
     background-color: #0e1118;
     @include media("<phone") {
-        height: fit-content;
+        height: 100vh;
     }
 }
 
