--- a/src/styles/views/team.scss
+++ b/src/styles/views/team.scss
@@ -2,6 +2,9 @@
     height: auto;
     width: 100%;
     background-color: $color-Albescent-White;
+    @include media("<phone") {
+        height: 90vh;
+    }
 }
 
 .team__wrapper {
