--- a/src/styles/views/testimonials.scss
+++ b/src/styles/views/testimonials.scss
@@ -3,7 +3,6 @@
     height: 76.8rem;
     background-color: black;
     @include media("<phone") {
-        height: 50rem;
     }
 }
 
